tests/types/errors/import_binding_type_mismatch.mog
const { Add: fn(f64, f64) f64 } = @import("../../modules/math.mog")

print(Add(1.0, 2.0))
